# contacts

./: .gitmodules  CMakeLists.txt
src/: json.hpp  main.cpp  opengl.hpp
src/tabs/: contacts.cpp  contacts.hpp  settings.cpp  settings.hpp
src/ui/: ui.cpp  ui.hpp
